python/pod.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: python-server-pod
  labels:
    app: python-server
spec:
  containers:
  - name: python-server-container
    image: registry.access.redhat.com/ubi9/python-311
    ports:
    - containerPort: 8000
    command: ["python3", "-m", "http.server"]
    resources:
      limits:
        cpu: "0.5"
        memory: "512Mi"
      requests:
        cpu: "0.2"
        memory: "256Mi"
    livenessProbe:
      httpGet:
        path: /
        port: 8000
      initialDelaySeconds: 3
      periodSeconds: 3
