python/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: python-server-service
spec:
  selector:
    app: python-server
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
